Fixed error page width on mobile

--- a/src/styles/FourOuFour.module.scss
+++ b/src/styles/FourOuFour.module.scss
@@ -44,7 +44,7 @@
 .errorText {
   font-weight: 300;
   left: 52px;
-  margin-bottom: 1em;
+  margin: 0 60px 1em 0;
   position: relative;
   top: -2.25em;
 
